--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -25,9 +25,7 @@
 		<li class="collection-item">
 			<div class="row" style="margin-bottom:0px;">
 				<div class="col s3">
-					<% if current_client.clientprofile.avatar != nil %>
 					<%= link_to image_tag(current_client.clientprofile.avatar(:mini), class:"circle responsive-img",style:"max-height:100px;"), clientprofile_path(current_client.clientprofile)%>
-					<% end %>
 				</div>
 				<div class="col s6 gray-text">
 					<p >
@@ -109,6 +107,7 @@
 			Perfil
 		</p>
 	</a>
+	<%= link_to('Cerrar Sesión', destroy_user_session_path, :method => :delete)%>
 
 	<% else %>
 	<a href= "<%= client_session_path %>" class="collection-item avatar grey-text text-darken-4">
