Set up Puma, Nginx & Capistrano

--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -1,33 +1,37 @@
 <div class="container">
-  <div class="grey-text darken-4">
+    <div class="grey-text darken-4">
 
-  <h5>Anuncios Clasificados</h5>
+        <h5>Anuncios Clasificados</h5>
+
+        <%= form_tag(profiles_path, method: "get", id: "search-form") do %>
+          <b><em>¿Que desea encontrar?</em></b><br>
+          <%= text_field_tag :query, params[:query], placeholder: "Buscar...",class:"grey-text darken-4", style:"max-width: 60%;" %>
+          <%= submit_tag "Buscar", class:"btn red" %>
+        <% end %>
 
         <ul class="collection z-depth-1">
-          <% @markets.each do |market| %>
-  		<a href="<%= market_path(market) %>" class="collection-item  blue-grey-text darken-4">
-  			<i class="material-icons">
-  				<%= market.icon %>
-  			</i> <%= market.title %>
-
-
-  		</a>
-
-          <% end %>
+            <% @markets.each do |market| %>
+            <a href="<%= market_path(market) %>" class="collection-item  blue-grey-text darken-4">
+                <i class="material-icons">
+                    <%= market.icon %>
+                </i>
+                <%= market.name %>
+            </a>
+            <% end %>
         </ul>
 
-  <% if master_admin_signed_in? %>
-    <div class="fixed-action-btn horizontal click-to-toggle" style="bottom: 45px; right: 24px;">
-    	<a href="<%= new_market_path %>" class="btn-floating waves-effect btn-large red"><i class="material-icons">add</i></a>
+        <% if master_admin_signed_in? %>
+        <div class="fixed-action-btn horizontal click-to-toggle" style="bottom: 45px; right: 24px;">
+            <a href="<%= new_market_path %>" class="btn-floating waves-effect btn-large red">
+                <i class="material-icons">add</i>
+            </a>
+        </div>
+        <% end %>
     </div>
-
-  <% end %>
-  </div>
-
 </div>
 
 <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-  <%= link_to new_item_path, class:"btn-floating btn-large red" do%>
+    <%= link_to new_item_path, class:"btn-floating btn-large red" do%>
     <i class="large material-icons">mode_edit</i>
-  <% end %>
+    <% end %>
 </div>
