--- a/app/views/offers/_offerts.html.erb
+++ b/app/views/offers/_offerts.html.erb
@@ -1,4 +1,4 @@
-<h5>Ofertas</h5>
+<h5><%= @profile.offer_section_name %></h5>
 
 <% if editable?(@profile) %>
   <i class="material-icons">mode_edit</i>
