--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,70 +2,74 @@
   <%= render "profile_info" %>
 </div>
 
-  <div class="col s12">
-    <ul class="tabs blue-text">
-      <li class="tab col s3"><a href="#tab1">Publicaciones</a></li>
-      <li class="tab col s3"><a href="#tab2">Ofertas</a></li>
-      <li class="tab col s3"><a href="#tab3">Galería</a></li>
-    </ul>
-  </div>
+<div class="center">
+  <a href="#" class="btn"><i class="material-icons"></i></a>
+</div>
 
-  <div id="tab1" class="col s12 container">
-    <%= render "post_frame" %>
-  </div>
+<div class="col s12">
+  <ul class="tabs blue-text">
+    <li class="tab col s3"><a href="#tab1">Publicaciones</a></li>
+    <li class="tab col s3"><a href="#tab2"><%= @profile.offer_section_name %></a></li>
+    <li class="tab col s3"><a href="#tab3">Galería</a></li>
+  </ul>
+</div>
 
-  <div id="tab2" class="col s12 container">
-    <% if user_signed_in? %>
-        <% if current_user.id == @profile.user_id %><br>
-          <%= link_to "Publicar Oferta", new_offer_path, class:"btn teal right" %><br>
-        <% end %>
-    <% end %>
+<div id="tab1" class="col s12 container">
+  <%= render "post_frame" %>
+</div>
 
-    <%= render "offers/offerts" %>
-  </div>
-  
-  <div id="tab3" class="col s12">
-    <div class="row">
-      <% @profile.posts.order("created_at DESC").each do |post| %>
-      <% unless post.pictures.empty? %>
-      <% post.pictures.each do |pic| %>
-          <div class="col s6">
-            <img src="<%= pic.image.url %>" class="responsive-img"/>
-          </div>
-      <% end %>
-      <% end %>
-      <% end %>
-  </div>
+<div id="tab2" class="col s12 container">
+  <% if user_signed_in? %>
+  <% if current_user.id == @profile.user_id %><br>
+  <%= link_to "Publicar Oferta", new_offer_path, class:"btn teal right" %><br>
+  <% end %>
+  <% end %>
 
-  </div>
-  <% if user_signed_in? && current_user.id == @profile.user_id %>
-    <div class="z-depth-1">
-      <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-        <a href="#modal1" class="modal-trigger btn-floating btn-large red">
-          <i class="large material-icons">mode_edit</i>
+  <%= render "offers/offerts" %>
+</div>
 
-      </a>
+<div id="tab3" class="col s12">
+  <div class="row">
+    <% @profile.posts.order("created_at DESC").each do |post| %>
+    <% unless post.pictures.empty? %>
+    <% post.pictures.each do |pic| %>
+    <div class="col s6">
+      <img src="<%= pic.image.url %>" class="responsive-img"/>
     </div>
-    <%= render "posts/form" %>
+    <% end %>
+    <% end %>
+    <% end %>
+  </div>
+
+</div>
+<% if user_signed_in? && current_user.id == @profile.user_id %>
+<div class="z-depth-1">
+  <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+    <a href="#modal1" class="modal-trigger btn-floating btn-large red">
+      <i class="large material-icons">mode_edit</i>
+
+    </a>
+  </div>
+  <%= render "posts/form" %>
   <% end %>
 
   <!-- Modal Structure -->
-<%= render "reviews/form" %>
+  <%= render "reviews/form" %>
 
 
-<script>
-$('.modal-trigger').leanModal({
+  <script>
+    $('.modal-trigger').leanModal({
     dismissible: true, // Modal can be dismissed by clicking outside of the modal
     opacity: .5, // Opacity of modal background
     in_duration: 300, // Transition in duration
     out_duration: 200, // Transition out duration
   }
-);
+  );
     $('.star-rating').raty({
       path: '/assets/',
       readOnly: true,
       score: function() {
-            return $(this).attr('data-score');
-    }
-  });
-</script>
+        return $(this).attr('data-score');
+      }
+    });
+  </script>
