--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -4,12 +4,19 @@
 
 }
 /* fallback */
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Material Icons'), local('MaterialIcons-Regular'), url(https://fonts.gstatic.com/s/materialicons/v17/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
+}
+
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
   font-size: 24px;
-  line-height: 1;
+  /*line-height: 1;*/
   letter-spacing: normal;
   text-transform: none;
   display: inline-block;
@@ -18,6 +25,11 @@
   direction: ltr;
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
+}
+.avatar_profile{
+  vertical-align: middle;
+  margin-left:2%;
+  max-width:50px;
 }
 .section-navbar{
   margin-left: 5%;
@@ -281,7 +293,7 @@ hl{
   max-width: 100%;
 }
 .mini-cover{
-  max-height: 50%; 
+  max-height: 50%;
 }
 
 /*SPAN COVER*/
@@ -291,11 +303,11 @@ hl{
 .span-cover{
   width:100%;
   height: 100%;
-  color: white; 
-  background: rgba(25, 25, 25, .3);  
-  float:left; 
-  position:absolute; 
-  top:60%; 
+  color: white;
+  background: rgba(25, 25, 25, .3);
+  float:left;
+  position:absolute;
+  top:60%;
   left:5px;
 }
 .span-text{
