--- a/app/assets/javascripts/ratyrate.js.erb
+++ b/app/assets/javascripts/ratyrate.js.erb
@@ -739,8 +739,8 @@
     cancel       : false,
     cancelClass  : 'raty-cancel',
     cancelHint   : 'Cancel this rating!',
-    cancelOff    : '<%= asset_path("cancel-off.png") %>',
-    cancelOn     : '<%= asset_path("cancel-on.png") %>',
+    cancelOff    : 'images/cancel-off.png',
+    cancelOn     : 'images/cancel-on.png',
     cancelPlace  : 'left',
     click        : undefined,
     half         : false,
@@ -760,9 +760,9 @@
     scoreName    : 'score',
     single       : false,
     space        : true,
-    starHalf     : '<%= asset_path("star-half.png") %>',
-    starOff      : '<%= asset_path("star-off.png") %>',
-    starOn       : '<%= asset_path("star-on.png") %>',
+    starHalf     : 'images/star-half.png',
+    starOff      : 'images/star-off.png',
+    starOn       : 'images/star-on.png',
     starType     : 'img',
     target       : undefined,
     targetFormat : '{score}',
