--- a/app/assets/javascripts/ratyrate.js.erb
+++ b/app/assets/javascripts/ratyrate.js.erb
@@ -739,8 +739,8 @@
     cancel       : false,
     cancelClass  : 'raty-cancel',
     cancelHint   : 'Cancel this rating!',
-    cancelOff    : 'images/cancel-off.png',
-    cancelOn     : 'images/cancel-on.png',
+    cancelOff    : 'cancel-off.png',
+    cancelOn     : 'cancel-on.png',
     cancelPlace  : 'left',
     click        : undefined,
     half         : false,
@@ -760,9 +760,9 @@
     scoreName    : 'score',
     single       : false,
     space        : true,
-    starHalf     : 'images/star-half.png',
-    starOff      : 'images/star-off.png',
-    starOn       : 'images/star-on.png',
+    starHalf     : 'star-half.png',
+    starOff      : 'star-off.png',
+    starOn       : 'star-on.png',
     starType     : 'img',
     target       : undefined,
     targetFormat : '{score}',
