--- a/app/views/menus/admin_panel/_market_form.html.erb
+++ b/app/views/menus/admin_panel/_market_form.html.erb
@@ -1,10 +1,9 @@
 <%= simple_form_for @market, remote: true  do |f|%>
 <div class="flex-row">
 	<div class="col-xs-6">
-		<%= f.input :name, placeholder:"Nombre" %>
+		<%= f.input :title, placeholder:"Nombre" %>
 	</div>
-	<div class="col-xs-6">
-		<%= f.input :icon, placeholder:"Icono" %>		
+		<%= f.input :icon, placeholder:"Icono" %>
 	</div>
 </div>
 <%= f.submit %>
