--- a/app/views/menus/admin_panel/_market_form.html.erb
+++ b/app/views/menus/admin_panel/_market_form.html.erb
@@ -1,10 +1,25 @@
-<%= simple_form_for @market, remote: true  do |f|%>
-<div class="flex-row">
-	<div class="col-xs-6">
-		<%= f.input :name, placeholder:"Nombre" %>
-	</div>
-		<%= f.input :icon, placeholder:"Icono" %>
-	</div>
-</div>
-<%= f.submit %>
+<%= form_for(@market) do |f| %>
+  <% if @market.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@market.errors.count, "error") %> prohibited this market from being saved:</h2>
+
+      <ul>
+      <% @market.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
+  </div>
+  <div class="field">
+    <%= f.label :description %><br>
+    <%= f.text_field :description %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
 <% end %>
