--- a/app/views/menus/admin_panel/_market_form.html.erb
+++ b/app/views/menus/admin_panel/_market_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@market) do |f| %>
+<%= form_for(@market), remote: true do |f| %>
   <% if @market.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@market.errors.count, "error") %> prohibited this market from being saved:</h2>
