--- a/app/views/markets/create.js.erb
+++ b/app/views/markets/create.js.erb
@@ -1,1 +1,1 @@
-$("#market_table").html("<%= escape_javascript(render partial:'menus/admin_panel/categories', locals:{categories: @markets} ) %>"); 
+$("#market_table").html("<%= escape_javascript(render partial:'menus/admin_panel/markets_table', locals:{markets: @markets} ) %>"); 
