--- a/app/views/clientprofiles/_form.html.erb
+++ b/app/views/clientprofiles/_form.html.erb
@@ -15,13 +15,9 @@
     <% end %>
 
     <%= form_for(current_client.clientprofile) do |f| %>
-    <div class="row">
-        <div class="col s2">
-            <%= image_tag(@clientprofile.avatar(:mini), class:"circle mini-avatar") %>
-        </div>
-        <div id="input_body" class="input-field col s4">
-            <%= f.text_field :name, placeholder:"Escribe tu nombre (Obligatorio)", class:"materialize-textarea", length:"50" %>
-        </div>
+    <div class="center">
+        <%= image_tag(@clientprofile.avatar, class:"circle mini-avatar",style:"max-width:120px") %>
+        <%= f.text_field :name, placeholder:"Escribe tu nombre (Obligatorio)", class:"materialize-textarea", length:"50" %>
     </div>
     <div class="row">
         <div class="col s6">
