--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -15,7 +15,7 @@
                 <i class="material-icons">
                     <%= market.icon %>
                 </i>
-                <%= market.name %>
+                <%= market.title %>
             </a>
             <% end %>
         </ul>
