--- a/app/views/menus/admin_panel.html.erb
+++ b/app/views/menus/admin_panel.html.erb
@@ -24,7 +24,7 @@
 		<div class="col s12 l6">
 			<h5>Anuncios Clasificados</h5>
 			<div id='market_table' class="categories-container">
-				<%= render partial:'menus/admin_panel/categories', locals:{categories: @markets} %>
+				<%= render partial:'menus/admin_panel/markets_table', locals:{markets: @markets} %>
 			</div>
 			<div class="panel-box">
 				<h5>Crear Seccion Clasificados</h5>
@@ -38,7 +38,7 @@
 			<%= render partial:"menus/admin_panel/clients_table", locals:{profiles: @profiles, limite: 10} %>
 		</div>
 		<div class="panel-box">
-			<div class="box-header">Gestionar Perfil de Empresa</div> 
+			<div class="box-header">Gestionar Perfil de Empresa</div>
 			<%= render '/menus/admin_panel/search_profile_form' %>
 			<div id="client_form">
 			<%= render '/menus/admin_panel/result_profiles' %>
