--- a/app/views/markets/destroy.js.erb
+++ b/app/views/markets/destroy.js.erb
@@ -1,1 +1,4 @@
-$("#market_table").html("<%= escape_javascript(render partial:'menus/admin_panel/markets_table', locals:{markets: @markets} ) %>"); 
+$("#market_table").html("<%= escape_javascript(render partial:'menus/admin_panel/markets_table', locals:{markets: @markets} ) %>");
+
+var $toastContent = $('<span>La categoría se eliminó.</span>');
+Materialize.toast($toastContent, 5000);
