--- a/app/views/menus/tools.html.erb
+++ b/app/views/menus/tools.html.erb
@@ -2,7 +2,7 @@
 <h5 class="side-blue     center">Panel de Administración</h5>
     <div class="flex-row  middle-xs">
         <div class="col-xs">
-            <%= image_tag(current_user.profile.avatar(:mini), class:"circle mini-img") %>
+            <%= image_tag(current_user.profile.avatar(), class:"circle mini-img") %>
         </div>
 
         <div class="col-xs-2">
