--- a/app/views/profiles/_profile_info.html.erb
+++ b/app/views/profiles/_profile_info.html.erb
@@ -2,7 +2,7 @@
 
   <div class="col s4 l3">
     <img style="margin-left:1%;"
-    src="<%= @profile.avatar.url(:mini) %>" alt="" class="circle responsive-img">
+    src="<%= @profile.avatar %>" alt="" class="circle responsive-img">
     <!--Follow Button-->
   </div>
   <div style="padding-left:5%;" class="col s8 m6 grey-text darken-4">
