--- a/app/views/welcome/_posts.html.erb
+++ b/app/views/welcome/_posts.html.erb
@@ -10,7 +10,7 @@
 <% @posts.each do |post| %>
   <ul class="collection z-depth-2">
     <li class="collection-item row">
-      <img style="vertical-align: middle; margin-left:2%;height: 50px; width:50px;" src="<%= post.profile.avatar.url(:mini) %>" alt="" class="circle">
+      <img style="vertical-align: middle; margin-left:2%;height: 50px; width:50px;" src="<%= post.profile.avatar.url(:thumb) %>" alt="" class="circle">
       <b><%= link_to post.profile.name, post.profile %></b>
 
       <% if user_signed_in? %>
