--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -40,12 +40,12 @@
           <div class="collection z-depth-1">
             <div class="collection-item">
               <% if comment.client_id <=> nil %>
-              <img style="vertical-align: middle; margin-left:2%; max-width:50px;" src="<%= comment.user.profile.avatar.url(:mini) %>" alt="img" class="circle responsive-img">
+              <img style="vertical-align: middle; margin-left:2%; max-width:50px;" src="<%= comment.user.profile.avatar.url(:thumb) %>" alt="img" class="circle responsive-img">
               <b><%= link_to comment.user.profile.name, comment.user.profile %></b>
 
 
               <% elsif comment.user_id <=> nil %>
-              <img style="vertical-align: middle; margin-left:2%; max-width:50px;" src="<%= comment.client.clientprofile.avatar.url(:mini) %>" alt="img" class="circle responsive-img">
+              <img style="vertical-align: middle; margin-left:2%; max-width:50px;" src="<%= comment.client.clientprofile.avatar.url(:thumb) %>" alt="img" class="circle responsive-img">
               <b><%= link_to comment.client.clientprofile.name, comment.client.clientprofile %></b>
 
               <% end %>
