--- a/app/views/menus/_profiles.erb
+++ b/app/views/menus/_profiles.erb
@@ -4,7 +4,7 @@
     <div class="col s12 l4">
         <div class="card row z-depth-1">
             <div class="col s5">
-                <%= link_to image_tag(profile.avatar(:mini), class:"circle responsive-img"), profile %>
+                <%= link_to image_tag(profile.avatar(), class:"circle responsive-img"), profile %>
             </div>
             <div class="col s7">
                 <b><%= profile.name %></b>
