--- a/app/views/welcome/_promo_profiles.html.erb
+++ b/app/views/welcome/_promo_profiles.html.erb
@@ -4,7 +4,7 @@
     <div class="col l6 s12">
         <div class="card row z-depth-1">
             <div class="col s4 l5">
-                <%= link_to image_tag(profile.avatar(:mini), class:"circle responsive-img"), profile %>
+                <%= link_to image_tag(profile.avatar(), class:"circle responsive-img"), profile %>
             </div>
             <div class="col s7">
                 <b><%= profile.name %></b>
