some size fixes

--- a/app/views/clientprofiles/show.html.erb
+++ b/app/views/clientprofiles/show.html.erb
@@ -8,9 +8,9 @@
         <% end %>
 
         <div class="row card-content">
-            <div class="col l3 s5">
+            <div class="col l3 s5 m3">
 
-                <%= image_tag @clientprofile.avatar(:thumb), class:"responsive-img materialboxed circle"%>
+                <%= image_tag @clientprofile.avatar(), class:"responsive-img materialboxed circle"%>
 
             </div>
 
