--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 <%= csrf_meta_tags %>
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+<meta name="google-site-verification" content="yJ5C5gpFv43Wcqxgl6z9wANka2YjJPNNP9Nt5oTreZY" />
 </head>
 
 <header>
