--- a/app/views/markets/show.html.erb
+++ b/app/views/markets/show.html.erb
@@ -4,7 +4,7 @@
     <div class="center">
       <h4>¡Vaya!</h4>
       <em>Parece que aun no hay artículos en esta categoría.</em><br>
-      <%= image_tag('sales.png') %><br>
+      <%= image_tag('sales.gif') %><br>
       <div style="margin-top:5%">
         <%= link_to "Publicar el primero", new_item_path, class:"btn green" %>
       </div>
